# JellyUpdate

./: README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
beetsplug/: jellyupdate.py
tests/: test_jellyupdate.py
